--- a/horarios.html
+++ b/horarios.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Horarios de películas</title>
-    <link rel="stylesheet" href="/styles/horarios.css">
+    <link rel="stylesheet" href="./styles/horarios.css">
 </head>
 <body style="background-color: #8A2BE2;">
     <header>
